--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,21 @@
 on:
- push:
-  branches:
-   -master
+  push:
+    branches:
+      - master    
+
+
+
+
+
 
 jobs:
   build:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
+    
+      
     steps:
-      - uses: actions/checkout@v3
-      - name: " login to dockerhub"
-        run: docker login --username ${{ secrets.DOCKER_USERNAME}} --password ${{ secrets.DOCKER_TOKEN }}
-      - name: " building docker "
-        run: docker build -t ${{ secrets.DOCKER_USERNAME}}/docker-image-creation .
-      - name: " pushing to docker hub "
-        run: docker push ${{ secrets.DOCKER_USERNAME}}/docker-image-creation
+      - name: 'testing github action'
+        run: pwd
+      - name: 'testing printing'
+        run: echo ahmed
+
