--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,27 @@
+name: Docker Build and Push
+
 on:
   push:
     branches:
-      - master    
-
-
-
-
-
+      - master  # Trigger workflow only on pushes to the 'master' branch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    
-      
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner for the job
     steps:
-      - name: 'testing github action'
-        run: pwd
-      - name: 'testing printing'
-        run: echo ahmed
+      # Step 1: Check out the repository
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      # Step 2: Log in to Docker Hub
+      - name: Login to DockerHub
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
+      # Step 3: Build the Docker image
+      - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/docker-image-creation .
+
+      # Step 4: Push the Docker image to Docker Hub
+      - name: Push Docker Image to DockerHub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/docker-image-creation
 
